--- a/testAPPs/TwoActivities/app/src/main/AndroidManifest.xml
+++ b/testAPPs/TwoActivities/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.listviewapp">
+    package="com.example.twoactivities">
 
     <application
         android:allowBackup="true"
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OneFund"></activity>
-        <activity android:name=".listview" />
+        <activity android:name=".Sub1Activity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
