--- a/SmartInvest/app/src/main/AndroidManifest.xml
+++ b/SmartInvest/app/src/main/AndroidManifest.xml
@@ -11,13 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SavedfundListviewItemActivity"></activity>
+        <activity android:name=".AddFundActivity"></activity>
+        <activity android:name=".SavedfundListviewItemActivity" />
 
         <service
             android:name=".SearchFundIntentService"
             android:exported="true" />
 
-        <activity android:name=".SearchedfundListviewItemActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
