--- a/SmartInvest/app/src/main/AndroidManifest.xml
+++ b/SmartInvest/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddFundActivity"></activity>
+        <activity android:name=".OneFundDetailActivity"></activity>
+        <activity android:name=".AddFundActivity" />
         <activity android:name=".SavedfundListviewItemActivity" />
 
         <service
